--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,11 @@
 
 @layer components {
   .formControl {
-    @apply mb-4;
+    @apply mb-4 w-96;
   }
 
   .error {
-    @apply text-red-500;
+    @apply text-red-500 w-96;
   }
 
   label {
