--- a/src/index.css
+++ b/src/index.css
@@ -18,4 +18,8 @@
   input {
     @apply w-96 py-2 px-4 border border-zinc-200 rounded-lg;
   }
+
+  button:disabled {
+    @apply bg-gray-300;
+  }
 }
